# rust-hello-world

./: Cargo.toml  README.md  print.py
src/: main.rs  print.rs
