[package]
name = "hello-world-cargo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.135"
serde_derive = "1.0.135"
serde_json = "1.0.78"